deploy/storage/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: harbor-storage
    component: rustfs
  name: harbor-storage
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: harbor-storage
      component: rustfs
  template:
    metadata:
      labels:
        app: harbor-storage
        component: rustfs
    spec:
      containers:
        - name: rustfs
          image: rustfs/rustfs:1.0.0
          ports:
            - containerPort: 9000
              name: api
            - containerPort: 9001
              name: console
          livenessProbe:
            httpGet:
              path: /health
              port: api
            initialDelaySeconds: 40
            periodSeconds: 30
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: api
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            limits:
              cpu: "2"
              memory: 3Gi
            requests:
              cpu: 250m
              memory: 512Mi
          volumeMounts:
            - mountPath: /data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: harbor-storage
