deploy/storage/base/console-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: harbor-storage
    component: rustfs
  name: harbor-storage-console
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  port:
    targetPort: console
  to:
    kind: Service
    name: harbor-storage
    weight: 100
  wildcardPolicy: None
